# LAB42_RTX_control

./: .gitignore  Dockerfile  README.md  install_dependencies.sh  launch_rqt.sh  start_arm.sh
ROS_ws/: Doxyfile
ROS_ws/src/ros_interface_umi_rtx/: CMakeLists.txt  package.xml
ROS_ws/src/ros_interface_umi_rtx/config/: README.txt  SN5867575.conf  SN5867575_FHD2_camera_info_left.yaml  SN5867575_FHD2_camera_info_right.yaml  SN5867575_FHD_camera_info_left.yaml  SN5867575_FHD_camera_info_right.yaml  SN5867575_HD2_camera_info_left.yaml  SN5867575_HD2_camera_info_right.yaml  SN5867575_HD_camera_info_left.yaml  SN5867575_HD_camera_info_right.yaml
ROS_ws/src/ros_interface_umi_rtx/include/ros_interface_umi_rtx/: main_gui.hpp  mainpage.h  node_arm.hpp  node_camera.hpp  node_camera_API.h  node_camera_API.hpp  node_commands.hpp  node_invkin.hpp  node_simu.hpp
ROS_ws/src/ros_interface_umi_rtx/include/ros_interface_umi_rtx/ZED_M_drivers/: usb_stereo_camera.h  zed_capture_node.h
ROS_ws/src/ros_interface_umi_rtx/include/ros_interface_umi_rtx/arm_parts/: arm.h  forearm.h  joint.h  wrist.h
ROS_ws/src/ros_interface_umi_rtx/include/ros_interface_umi_rtx/custom_widget/: click widget.hpp
ROS_ws/src/ros_interface_umi_rtx/include/ros_interface_umi_rtx/robotics/: arm.h  chess.h  path.h  spp.h  umiinit.h
ROS_ws/src/ros_interface_umi_rtx/include/ros_interface_umi_rtx/umi-drivers/: 680x0.h  armraw.h  ipcrt.h  rtx.h  rtxd.h
ROS_ws/src/ros_interface_umi_rtx/include/ros_interface_umi_rtx/umi-drivers/m68kipc/: a.out.h
ROS_ws/src/ros_interface_umi_rtx/include/umi-rtx/: install-dependency.sh
ROS_ws/src/ros_interface_umi_rtx/include/umi-rtx/include/robotics/: _template.h  basics.h  interface.h  matrix.h  xml_parser.h
ROS_ws/src/ros_interface_umi_rtx/include/umi-rtx/include/umi-drivers/: armlib.h  hostlib.h  ipc.h  ipcrt.h  rtxd.h
ROS_ws/src/ros_interface_umi_rtx/include/umi-rtx/src/armlib/: armerror.c
ROS_ws/src/ros_interface_umi_rtx/include/umi-rtx/src/daemon/: ttyio.h
ROS_ws/src/ros_interface_umi_rtx/include/umi-rtx/src/game/: Makefile
ROS_ws/src/ros_interface_umi_rtx/include/umi-rtx/src/gnuchess/: Makefile
ROS_ws/src/ros_interface_umi_rtx/include/umi-rtx/src/hostlib/: duartset.h  runcpu.c
ROS_ws/src/ros_interface_umi_rtx/include/umi-rtx/src/pathplan/: Path_plan.c  xyz.h
ROS_ws/src/ros_interface_umi_rtx/include/umi-rtx/src/rtxlib/: rtxcmds.c
ROS_ws/src/ros_interface_umi_rtx/include/umi-rtx/src/shell/: globals.h  names.c
ROS_ws/src/ros_interface_umi_rtx/include/umi-rtx/src/umi/: Makefile  umiinit.c
ROS_ws/src/ros_interface_umi_rtx/include/umi-rtx/src/xml_parser/: Makefile  chess_board.c
ROS_ws/src/ros_interface_umi_rtx/launch/: arm.launch.py  simu.launch.py
ROS_ws/src/ros_interface_umi_rtx/msgs/common_msgs/: CMakeLists.txt  package.xml  rosbridge_mapping.yaml
ROS_ws/src/ros_interface_umi_rtx/msgs/common_msgs/msg/: BoundingBox2D.msg  Detection2D.msg  Detection3D.msg  Disparity.msg  ObjectPos.msg  ObjectPos3D.msg  StereoDetection.msg
ROS_ws/src/ros_interface_umi_rtx/rviz/: rviz_basic_settings.rviz
ROS_ws/src/ros_interface_umi_rtx/src/: main_gui.cpp  node_arm.cpp  node_camera.cpp  node_camera_API.cpp  node_commands.cpp  node_invkin.cpp  node_simu.cpp
ROS_ws/src/ros_interface_umi_rtx/src/ZED_M_drivers/: usb_stereo_camera.cpp  zed_capture_node.cpp
ROS_ws/src/ros_interface_umi_rtx/src/arm_parts/: arm.cpp  forearm.cpp  joint.cpp  wrist.cpp
ROS_ws/src/ros_interface_umi_rtx/src/armlib/: armcmds.cpp  armraw.cpp
ROS_ws/src/ros_interface_umi_rtx/src/daemon/: Makefile  rtxd  rtxd.c  vrtx.h
ROS_ws/src/ros_interface_umi_rtx/src/driver/armlib/: Makefile  armcmds.cpp  armerror.c
ROS_ws/src/ros_interface_umi_rtx/src/driver/daemon/: ipcio.h
ROS_ws/src/ros_interface_umi_rtx/src/driver/game/: chess.lst  chessraw.c
ROS_ws/src/ros_interface_umi_rtx/src/driver/hostlib/: README  checksum.h  duartset.c  validate.c
ROS_ws/src/ros_interface_umi_rtx/src/driver/inverse/: inverse.c
ROS_ws/src/ros_interface_umi_rtx/src/driver/pathplan/: make_path.h  vector.c
ROS_ws/src/ros_interface_umi_rtx/src/driver/playall/: playall.c
ROS_ws/src/ros_interface_umi_rtx/src/driver/rtxlib/: Makefile
ROS_ws/src/ros_interface_umi_rtx/src/driver/shell/: Makefile  daemon.c
ROS_ws/src/ros_interface_umi_rtx/src/drivers/: Makefile.common
ROS_ws/src/ros_interface_umi_rtx/src/drivers/armlib/: armerror.cpp  armraw.cpp
ROS_ws/src/ros_interface_umi_rtx/src/drivers/daemon/: ipcio.c  ttyio.c  vrtx.c
ROS_ws/src/ros_interface_umi_rtx/src/drivers/game/: chesscmds.c
ROS_ws/src/ros_interface_umi_rtx/src/drivers/gnuchess/: gnuchess.c
ROS_ws/src/ros_interface_umi_rtx/src/drivers/hostlib/: duartrst.c  stopcpu.c
ROS_ws/src/ros_interface_umi_rtx/src/drivers/pathplan/: Makefile  io.c  queue.c  queue.h
ROS_ws/src/ros_interface_umi_rtx/src/drivers/rtxlib/: raw.c
ROS_ws/src/ros_interface_umi_rtx/src/drivers/shell/: automaton.c  readline.c  rtxtop.c
ROS_ws/src/ros_interface_umi_rtx/src/drivers/umi/: umicmds.cpp  umiinit.cpp
ROS_ws/src/ros_interface_umi_rtx/src/drivers/xml_parser/: robot.c
ROS_ws/src/ros_interface_umi_rtx/src/game/: chess.c
ROS_ws/src/ros_interface_umi_rtx/src/gnuchess/: robdsp.c
ROS_ws/src/ros_interface_umi_rtx/src/hostlib/: checksum.c  openipc.c
ROS_ws/src/ros_interface_umi_rtx/src/matrix/: matrix.c
ROS_ws/src/ros_interface_umi_rtx/src/move/: Makefile
ROS_ws/src/ros_interface_umi_rtx/src/pathplan/: move_piece.h  vector.h  xyz.c
ROS_ws/src/ros_interface_umi_rtx/src/playall/: Makefile  playall
ROS_ws/src/ros_interface_umi_rtx/src/shell/: misc.h  rtxsh  shell.c
ROS_ws/src/ros_interface_umi_rtx/urdf/: umi_rtx.urdf
ROS_ws/src/ros_interface_umi_rtx/zed_tools/: download_calib_file.sh  generate_rect_map.py  requirements.txt
ROS_ws/src/ros_interface_umi_rtx/zed_tools/calibration/: README.md  stereo_calibration.py  stereo_calibration.sh  stereo_capture.py  stereo_capture.sh  stereo_test.py  stereo_test.sh
umi-rtx/: LICENSE  README.md
umi-rtx/data/: board.rtx  name_file  pieces.rtx  umi.rtx
umi-rtx/logs/: rtxlog
umi-rtx/ports/: rtx
umi-rtx/robot/: name_file
(+305 files in other folders)
